fix: stack charts on mobile screens

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,6 +8,14 @@
 
 
 /*
+ * Custom sizes
+ */
+.h-128 {
+  height: 32rem;
+}
+
+
+/*
  * Base
  */
 
